1. Reorganised backplane module to use rolled-up files. Also reorganised unit-test framework to make use of this. 2. Renamed the Yowl module to 'Notify', and then added it to the backplane. 3. Created roll-up for RDFa module, and altered unit-test framework accordingly.

--- a/.hgignore
+++ b/.hgignore
@@ -3,7 +3,11 @@ syntax: glob
 *.rej
 *.orig
 
-xforms/src/lib/backplane/_unit-tests/temp
+_unit-tests/backplane/temp
+_unit-tests/backplane/unit-tests.js
+_unit-tests/rdfa/unit-tests.js
+
+deploy
 
 xforms/build
 xforms/samples
