1. Added Ant task to support deploying files to Google Code. 2. Any created files are now placed in an 'output' directory in the 'build' area, rather than in 'deploy'. 3. An additional Ant target has been added to copy these files from the 'output' directory to 'deploy'. 4. Updated default.css, core.js and xforms.js to locate required resources in the root directory, rather than in 'assets'. This is because sub-directories are not supported in the Google Code download area.

--- a/.hgignore
+++ b/.hgignore
@@ -3,10 +3,13 @@ syntax: glob
 *.rej
 *.orig
 
+build.credentials.properties
+
 _unit-tests/backplane/temp
 _unit-tests/backplane/unit-tests.js
 _unit-tests/rdfa/unit-tests.js
 
+build/output
 deploy
 
 xforms/build
