--- a/ant.properties
+++ b/ant.properties
@@ -1,7 +1,10 @@
+build.dir = build
+output.dir = ${build.dir}/output
 deploy.dir = deploy
 src.dir = .
 tools.dir = tools
 
 product.name = backplane
+project.name = backplanejs
 version.number = 0.2.0
 dist.package.name = ${product.name}-${version.number}
