Added task to build which creates a deployment archive for developers, and uploads it to Google Code.

--- a/ant.properties
+++ b/ant.properties
@@ -1,10 +1,12 @@
-build.dir = build
-output.dir = ${build.dir}/output
-deploy.dir = deploy
-src.dir = .
-tools.dir = tools
-
 product.name = backplane
 project.name = backplanejs
-version.number = 0.3.0
-dist.package.name = ${product.name}-${version.number}
+version.number = 0.4.0
+dist.package.name = ${project.name}-${version.number}
+deploy.package.name = ${project.name}-${version.number}.zip
+
+build.dir = build
+output.dir = ${build.dir}/output/${dist.package.name}
+deploy.root.dir = deploy
+deploy.dir = ${deploy.root.dir}/${dist.package.name}
+src.dir = .
+tools.dir = tools
