--- a/.hgignore
+++ b/.hgignore
@@ -3,17 +3,10 @@ syntax: glob
 *.rej
 *.orig
 
-build.credentials.properties
+my.ant.properties
 
-_unit-tests/backplane/temp
-_unit-tests/backplane/unit-tests.js
-_unit-tests/rdfa/unit-tests.js
+_unit-tests
 
 build/output
 deploy
-
-xforms/build
-xforms/samples
-xforms/testsuite
-xforms/tools
-xforms/unit-tests
+work
