--- a/tools/GoogleAppEngine/app.yaml
+++ b/tools/GoogleAppEngine/app.yaml
@@ -5,7 +5,10 @@ api_version: 1
 
 handlers:
 - url: /backplanejs-0.5.0
-  static_dir: ../../deploy/backplanejs-0.5.0
+  static_dir: backplanejs-0.5.0
+
+- url: /backplanejs-0.4.0
+  static_dir: backplanejs-0.4.0
 
 - url: /samples
   static_dir: ../../_samples
@@ -16,5 +19,5 @@ handlers:
 - url: /work
   static_dir: ../../work
 
-- url: .*
+- url: /.*
   script: main.py
