--- a/tools/GoogleAppEngine/app.yaml
+++ b/tools/GoogleAppEngine/app.yaml
@@ -4,6 +4,9 @@ runtime: python
 api_version: 1
 
 handlers:
+- url: /backplanejs-0.6.0
+  static_dir: backplanejs-0.6.0
+
 - url: /backplanejs-0.5.0
   static_dir: backplanejs-0.5.0
 
@@ -19,5 +22,9 @@ handlers:
 - url: /work
   static_dir: ../../work
 
+- url: /rdfa-debugger.html
+  static_files: rdfa-debugger.html
+  upload: rdfa-debugger.html
+
 - url: /.*
-  script: main.py
+  script: rdfa.py
