--- a/build.xml
+++ b/build.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-   - Copyright (c) 2009 Backplane Ltd.
+   - Copyright (c) 2009 Mark Birbeck
    -
    - Licensed under the Apache License, Version 2.0 (the "License");
    - you may not use this file except in compliance with the License.
@@ -225,6 +225,7 @@
 		</copy>
 
 		<copy todir="${deploy.dir}/assets" failonerror="true">
+			<fileset dir="${build.dir}/assets" />
 			<fileset dir="${output.dir}">
 				<include name="${product.name}.css" />
 			</fileset>
